# espresso

./: .travis.yml  CMakeLists.txt  PLANNING.md  README.md
class-parser/: CMakeLists.txt  Class.cpp  Class.hpp  ClassParser.cpp  ClassParser.hpp  DataStream.hpp  Failable.hpp
class-parser/constant-pool/: ClassInfo.hpp  Double.hpp  FieldRefInfo.cpp  Integer.cpp  InterfaceMethodRefInfo.cpp  Item.hpp  Long.cpp  Long.hpp  Manager.cpp  Manager.hpp  MethodRefInfo.cpp  MethodRefInfo.hpp  NameAndType.cpp  NameAndType.hpp  RefInfo.cpp  RefInfo.hpp  StringInfo.cpp  Utf8.cpp
sources/: CMakeLists.txt
sources/Blender/: CMakeLists.txt  JVMClass.cpp  JVMClass.hpp  VMMethodProvider.cpp  VMMethodProvider.hpp
sources/ClassParser/: Attribute.cpp  Attribute.hpp  Attributed.cpp  Attributed.hpp  CMakeLists.txt  Class.cpp  Class.hpp  ClassEntry.cpp  ClassEntry.hpp  DataStream.cpp  DataStream.hpp  Failable.hpp  Field.cpp  Field.hpp  JIT.cpp  JIT.hpp  Logger.cpp  Logger.hpp  Method.cpp  Method.hpp  MethodProvider.hpp
sources/ClassParser/Attribute/: Base.cpp  Base.hpp  Code.cpp  Code.hpp
sources/ClassParser/ConstantPool/: ClassInfo.cpp  ClassInfo.hpp  Double.cpp  FieldRefInfo.hpp  Float.cpp  Float.hpp  Integer.hpp  InterfaceMethodRefInfo.hpp  Manager.hpp  MethodRefInfo.cpp  MethodRefInfo.hpp  NameAndType.cpp  NameAndType.hpp  RefInfo.cpp  RefInfo.hpp  StringInfo.hpp  Utf8.hpp
sources/ClassParser/JIT/: OperandStack.hpp  ProgressNode.hpp
sources/VM/: CMakeLists.txt  ClassResolver.cpp  ClassResolver.hpp
sources/VM/Class/: Base.cpp  Base.hpp  DlOpen.cpp  DlOpen.hpp  Parsed.cpp  Parsed.hpp
tests/: CMakeLists.txt
tests/Blender/: CMakeLists.txt
tests/Blender/JVMClass/: CMakeLists.txt  ClinitTest.java  NonExistentSignature.java  class-driver.cpp  clinit-driver.cpp
tests/Blender/JVMClass/FindMethod/: CMakeLists.txt  NonExistentMethod.java
tests/Blender/VMMethodProvider/: 100-get-native-method.cpp  CMakeLists.txt
tests/ClassParser/: CMakeLists.txt
tests/ClassParser/Class/: CMakeLists.txt  t050_empty_class.java  t050_empty_interface.java  t052_class_with_methods.java  t052_enum_with_fields.java  t052_interface_with_methods.java  t053_enum_with_constants.java  t054_class_with_code.java
tests/ClassParser/JIT/: 000-just-return.cpp  001-nope-nope-nope.cpp  005-return-double-const.cpp  005-return-float-const.cpp  005-return-int-const.cpp  005-return-long-const.cpp  005-return-object-const.cpp  020-parameters-double.cpp  020-parameters-float.cpp  020-parameters-int.cpp  020-parameters-long.cpp  020-parameters-object.cpp  030-dstore.cpp  030-fstore.cpp  030-istore.cpp  030-lstore.cpp  040-int-math.cpp  050-goto.cpp  050-if-icmp.cpp  051-ifnull.cpp  060-dup.cpp  190-signatures.cpp  200-invokestatic.cpp  201-invokestatic-recursive.cpp  210-instance-methods.cpp  CMakeLists.txt  EmptyClass.java  EmptyStaticInitializer.java  binary-driver.cpp  class-driver.cpp  driver.cpp  method-just-return.cpp
tests/Milestones/: CMakeLists.txt  Milestone2.java  Milestone3.java  Milestone4.java  TODO.md  driver.cpp  milestone2.cpp  milestone3.cpp  milestone4.cpp
tests/VM/: 050-classresolver-findclass.cpp  CMakeLists.txt
tests/VM/Class/: 010-dlopen-findmethod.cpp  CMakeLists.txt  ClassWithMethods.java  class-driver.cpp
tests/class-parser/: CMakeLists.txt
tests/class-parser/class/: CMakeLists.txt  driver.cpp  t020_empty_class.java  t020_empty_enum.java  t020_empty_interface.java  t021_enum_with_values.java  t022_class_with_fields.java  t022_class_with_methods.java  t022_enum_with_fields.java  t022_enum_with_methods.java  t022_interface_with_methods.java  t023_class_with_constants.java  t023_enum_with_constants.java  t023_interface_with_constants.java  t024_class_with_code.java  t050_empty_enum.java  t051_enum_with_values.java  t052_class_with_fields.java  t052_enum_with_methods.java  t053_class_with_constants.java  t053_interface_with_constants.java
tests/milestones/: Milestone1.java  TODO.md  driver.cpp
